# drift

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
drift/: __init__.py  cli.py  config.py  db.py  install_shopify.py  models.py  orchestrator.py
drift/dashboard/: app.py
drift/dossier/: __init__.py  anthropic.py  base.py  factory.py  mock.py  prompts.py
drift/execution/: __init__.py  ads.py  base.py  factory.py  fulfilment.py  shopify.py  store_brand.py
drift/monitoring/: __init__.py  rotation.py
drift/scoring/: __init__.py  hotness.py  ip_gate.py  kill_rule.py
drift/signals/: __init__.py  base.py  cj_hot.py  factory.py  google_trends.py  mock.py  tiktok_creative_center.py
drift/sourcing/: __init__.py  base.py  cj.py  factory.py  mock.py
tests/: conftest.py  test_factories.py  test_focus_mode.py  test_orchestrator_loop.py  test_pre_sourced.py  test_scoring.py
tests/fixtures/: mock_signals.json
